k8s/40-networkpolicies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-db-from-all-but-apps
  namespace: yoga-booker
spec:
  podSelector:
    matchLabels:
      app: postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: class-service
        - podSelector:
            matchLabels:
              app: booking-service
      ports:
        - port: 5432
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: no-pod-to-internet-except-dns
  namespace: yoga-booker
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector: {}
          podSelector: {}
      ports:
        - port: 53
          protocol: UDP
    - to: []
